# 01--SISTEMA-AUREON

./: .gitignore  Cargo.toml  README.md  fix_sqlx.py
apps/aureon-config/src-tauri/: Cargo.toml  tauri.conf.json
apps/aureon-config/src-tauri/capabilities/: default.json
apps/aureon-config/src-tauri/src/: commands.rs  estado.rs  lib.rs
apps/aureon-config/ui-blazor/: App.razor  _Imports.razor  aureon-config-ui.csproj
apps/aureon-config/ui-blazor/Pages/: Index.razor
apps/aureon-config/ui-blazor/Services/: TauriService.cs
apps/aureon-config/ui-blazor/wwwroot/: aureon-config-ui.styles.css  index.html
apps/aureon-pdv/src-tauri/: Cargo.toml  tauri.conf.json
apps/aureon-pdv/src-tauri/src/: commands.rs  commands_backup.rs  commands_caixa.rs  commands_compras.rs  commands_delivery.rs  commands_estoque.rs  commands_financeiro.rs  commands_fiscal.rs  commands_gourmet.rs  commands_impressao.rs  commands_licenciamento.rs  commands_operacional.rs  commands_pagamento.rs  commands_relatorios.rs  commands_seguranca.rs  commands_sistema.rs  commands_sync.rs  commands_sync_fiscal.rs  commands_venda.rs  estado.rs  lib.rs  licenca_crypto_local.rs  main.rs
apps/aureon-pdv/ui-blazor/: Program.cs  _Imports.razor  aureon-pdv-ui.csproj
apps/aureon-pdv/ui-blazor/Pages/: BackupPdv.razor  Caixa.razor  ComandaDetalhe.razor  ComandasPdv.razor  CompraDetalhe.razor  ComprasPdv.razor  DashboardPdv.razor  DeliveryPdv.razor  DiagnosticoSistemaPdv.razor  EstoquePdv.razor  FinanceiroContasPagar.razor  FinanceiroContasReceber.razor  FinanceiroLancamentos.razor  FiscalConfiguracoes.razor  FiscalDicionarios.razor  FiscalRegrasTributarias.razor  FiscalSyncPdv.razor  Gourmet.razor  HistoricoCaixa.razor  HistoricoVendas.razor  Index.razor  LicencaPdv.razor  MesaDetalhe.razor  MesasPdv.razor  OrcamentosPdv.razor  Pdv.razor  PedidoDeliveryDetalhe.razor  PreVendasPdv.razor  ProducaoPdv.razor  Reimpressao.razor  ReimpressoesPdv.razor  RelatoriosPdv.razor  TransferenciaComandaModal.razor  TransferenciaMesaModal.razor
apps/aureon-pdv/ui-blazor/Services/: NotificationService.cs  PdvModels.cs
apps/aureon-pdv/ui-blazor/Shared/: AutorizacaoSupervisorModal.razor  BaixaTituloModal.razor  ClienteBuscaModal.razor  CompraItemModal.razor  ConfigurarPinModal.razor  DespesaManualModal.razor  EspelhoFiscalModal.razor  (+13 more)
apps/aureon-retaguarda/ui-blazor/: App.razor  Program.cs  _Imports.razor  aureon-retaguarda-ui.csproj
assets/schemas_fiscal/: manifest.json
crates/aureon-core/: Cargo.toml
crates/aureon-core/src/: dtos.rs  dtos.rs.bak  errors.rs  lib.rs  response.rs  types.rs
crates/aureon-domain/: Cargo.toml
crates/aureon-infra/: Cargo.toml
crates/aureon-infra/src/: lib.rs
crates/aureon-infra/src/sqlite/: conexao.rs  migrations.rs  mod.rs
crates/aureon-infra/src/sqlite/repositories/: configuracao.rs  log.rs  mod.rs  terminal.rs
crates/aureon-shared/: Cargo.toml
crates/aureon-shared/src/: config_store.rs  crypto.rs  lib.rs  logging.rs
crates/aureon-sync/: Cargo.toml
crates/aureon-sync/src/: lib.rs  modelos.rs
database/migrations/postgresql/: 001_schema_inicial.sql  002_tabelas_fase1.sql  003_seeds_iniciais.sql  004_configuracao_empresa.sql  005_seguranca.sql  006_cadastros_pessoas.sql  007_cadastros_produtos.sql  008_configuracoes_operacionais.sql  009_sync_base.sql  013_fase17_fiscal_mestre.sql  014_fase18_certificados_fiscais.sql  015_fase19_historico_homologacao_fiscal.sql  016_fase20_licenciamento_mestre.sql
database/migrations/sqlite/: 001_schema_inicial.sql  002_sync_fase6.sql  003_venda_nucleo.sql  004_venda_nucleo_correcao_financeira.sql  005_pdv_operacional_fase8.sql  006_pdv_operacional_fase8_cache.sql  007_pdv_gourmet_fase9.sql  008_fase10_delivery.sql  009_fase11_estoque.sql  010_fase12_compras.sql  011_fase13_financeiro.sql  012_fase16_fiscal_base.sql  013_fase17_sync_fiscal.sql  014_fase20_licenciamento.sql  015_fase21_usuarios_permissoes.sql
docker/fiscal/: Dockerfile  docker-compose.yml
docs/: architecture.md  audit.md  backup-local.md  cash-session.md  company-configuration.md  decisions.md  fase-2-aceite.md  fiscal-backoffice-ui.md  fiscal-base.md  fiscal-certificate-management.md  fiscal-external-blockers.md  fiscal-homologation-connectivity.md  fiscal-homologation-console.md  fiscal-homologation-history.md  fiscal-homologation-readiness.md  fiscal-master-backoffice.md  fiscal-nfce-builder.md  fiscal-pdv-application.md  fiscal-preview-ui.md  fiscal-qrcode-preview.md  fiscal-runtime-docker.md  fiscal-schema-manifest.md  fiscal-schema-validation.md  fiscal-sifen-builder.md  fiscal-sync-diagnostics.md  fiscal-sync-packages.md  fiscal-xml-signing.md  fiscal-xmldsig-real.md  fiscal-xmldsig-runtime.md  installation.md  licensing-cloud-checkin.md  licensing-local-activation.md  licensing-local.md  licensing-master.md  licensing-operational-guard.md  licensing-policy.md  licensing-signature.md  licensing-sync.md  master-data-publication.md  multicurrency-payments.md  (+82 more)
scripts/: build-pdv-windows.ps1  check-fiscal-real.ps1  check-fiscal-real.sh  check-pdv-environment.ps1  create-aureon-dirs.ps1  setup-dev.ps1
services/aureon-api-local/: .env.example  Cargo.toml
services/aureon-api-local/src/: app.rs  config.rs  crypto.rs  db.rs  erros.rs  lib.rs  licenca_crypto.rs  main.rs  middleware.rs
services/aureon-api-local/src/routes/: auth.rs  diagnostico.rs  empresa.rs  health.rs  licenciamento.rs  mod.rs  seguranca.rs
services/aureon-api-local/src/routes/cadastros/: grupos.rs  mod.rs  pessoas.rs  produtos.rs
services/aureon-api-local/src/routes/configuracoes/: mod.rs  operacionais.rs
services/aureon-api-local/src/routes/fiscal/: assinatura.rs  assinatura_xmldsig.rs  certificados.rs  clientes_fiscais.rs  configuracoes.rs  dicionarios.rs  historico_homologacao.rs  homologacao.rs  mod.rs  nfce_preview.rs  prontidao.rs  publicacao.rs  qrcode_preview.rs  regras.rs  sifen_preview.rs  validacao_preview.rs  versoes.rs
services/aureon-api-local/src/routes/sync/: diagnostico.rs  mod.rs  pacotes.rs  publicacao.rs  terminais.rs
services/aureon-api-local/src/services/: mod.rs
(+70 files in other folders)
