[package]
name    = "aureon-infra"
version.workspace = true
edition.workspace = true

[dependencies]
aureon-core   = { workspace = true }
aureon-domain = { workspace = true }
rusqlite      = { workspace = true }
tracing       = { workspace = true }
chrono        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
argon2 = { workspace = true, features = ["std", "password-hash"] }
rand.workspace = true
uuid = { workspace = true, features = ["v4"] }
