[package]
name    = "aureon-shared"
version.workspace = true
edition.workspace = true

[dependencies]
aureon-core = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
aes-gcm = { workspace = true }
rand.workspace = true
base64  = { workspace = true }
serde   = { workspace = true }
serde_json.workspace = true
