[package]
name    = "aureon-api-local"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aureon-api-local"
path = "src/main.rs"

[dependencies]
aureon-core   = { workspace = true }
aureon-shared = { workspace = true }

axum        = { workspace = true }
tokio       = { workspace = true }
tower-http  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
chrono      = { workspace = true }
sqlx        = { workspace = true }
rust_decimal = { workspace = true }
uuid         = { workspace = true }
argon2       = { workspace = true }
rand         = { workspace = true }
sha2         = { workspace = true }

# Variáveis de ambiente
dotenvy = "0.15"
base64.workspace = true

# Dependências Fiscais Opcionais
openssl = { version = "0.10", optional = true, features = ["vendored"] }

[features]
default = []
fiscal_real = ["openssl"]
