[package]
name    = "aureon-api-local"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aureon-api-local"
path = "src/main.rs"

[dependencies]
aureon-core   = { workspace = true }
aureon-shared = { workspace = true }

axum        = { workspace = true }
tokio       = { workspace = true }
tower-http  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
chrono      = { workspace = true }
sqlx        = { workspace = true }
rust_decimal = { workspace = true }
uuid         = { workspace = true }
argon2       = { workspace = true }
rand         = { workspace = true }
sha2         = { workspace = true }
ed25519-dalek = { workspace = true }
hex          = { workspace = true }

# Variáveis de ambiente
dotenvy = "0.15"
base64.workspace = true

qrcode = { version = "0.14", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }

# Cliente HTTP para diagnóstico de conectividade fiscal (sem envio de documento)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Dependências Fiscais Opcionais
openssl = { version = "0.10", optional = true, features = ["vendored"] }
xmlsec = { version = "0.3.0", optional = true }
# mTLS com certificado A1 real (apenas em ambiente Linux/WSL/CI)
reqwest-mtls = { package = "reqwest", version = "0.12", default-features = false, features = ["native-tls"], optional = true }

[features]
default = []
fiscal_real = ["openssl", "reqwest-mtls"]
fiscal_xmldsig_real = ["xmlsec", "openssl"]
