[package]
name    = "aureon-pdv"
version.workspace = true
edition.workspace = true

[lib]
name       = "aureon_pdv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri             = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs   = "2"
serde             = { workspace = true }
serde_json        = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
chrono            = { workspace = true }
uuid              = { workspace = true }
reqwest           = { workspace = true }

# Crates internas Aureon
aureon-core   = { workspace = true }
aureon-shared = { workspace = true }
aureon-domain = { workspace = true }
aureon-infra  = { workspace = true }
rusqlite      = { workspace = true }
bcrypt = "0.19.1"

# Criptografia local — verificação Ed25519 de payload de licença (Fase 20 Bloco 5)
ed25519-dalek = { workspace = true }
sha2          = { workspace = true }
base64        = { workspace = true }
hex           = { workspace = true }
rand          = { workspace = true }
argon2 = { workspace = true, features = ["password-hash"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
